[gd_scene load_steps=9 format=3 uid="uid://2c7e4tsthixk"]

[ext_resource type="Script" path="res://scripts/register_screen.gd" id="1_0h1d0"]
[ext_resource type="Texture2D" uid="uid://b7q117d87ujyo" path="res://assets/Tiny Wonder UI Free/fundo_fazenda.png" id="2_caauj"]
[ext_resource type="Texture2D" uid="uid://0ybsns1bxitn" path="res://assets/Tiny Wonder UI Free/barra_clara.png" id="3_gs571"]
[ext_resource type="Texture2D" uid="uid://du0tcjpclrq8x" path="res://assets/Tiny Wonder UI Free/botao_claro_v4.png" id="5_6i7u5"]
[ext_resource type="FontFile" uid="uid://cutg2f3cmjb8g" path="res://fonts/Retro Gaming.ttf" id="5_me4ey"]
[ext_resource type="AudioStream" uid="uid://c4mmhy14gs7ha" path="res://sounds/gentle_fields_trilha.mp3" id="6_bc1f0"]

[sub_resource type="LabelSettings" id="LabelSettings_k27mc"]
outline_size = 3
outline_color = Color(1, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xfit3"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="register_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0h1d0")

[node name="FundoFazenda" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_caauj")
expand_mode = 1

[node name="BarraClaraEmail" type="Sprite2D" parent="."]
position = Vector2(610.403, 106)
scale = Vector2(1.66129, 1.66129)
texture = ExtResource("3_gs571")

[node name="BarraClaraConfirmarSenha" type="Sprite2D" parent="."]
position = Vector2(610.403, 267)
scale = Vector2(1.66129, 1.66129)
texture = ExtResource("3_gs571")

[node name="BarraClaraSenha" type="Sprite2D" parent="."]
position = Vector2(610.403, 185)
scale = Vector2(1.66129, 1.66129)
texture = ExtResource("3_gs571")

[node name="BarraClaraPIN" type="Sprite2D" parent="."]
position = Vector2(610.403, 347)
scale = Vector2(1.66129, 1.66129)
texture = ExtResource("3_gs571")

[node name="Username" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 432.403
offset_top = 86.0
offset_right = 787.403
offset_bottom = 124.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.4)
theme_override_fonts/font = ExtResource("5_me4ey")
theme_override_font_sizes/font_size = 18
placeholder_text = "E-mail"
flat = true

[node name="UsernameErrorMessage" type="Label" parent="."]
layout_mode = 0
offset_left = 434.403
offset_top = 126.0
offset_right = 780.403
offset_bottom = 149.0
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_k27mc")

[node name="Password" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 432.403
offset_top = 165.0
offset_right = 787.403
offset_bottom = 203.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.403922)
theme_override_fonts/font = ExtResource("5_me4ey")
theme_override_font_sizes/font_size = 18
placeholder_text = "Senha"
flat = true
secret = true

[node name="PasswordErrorMessage" type="Label" parent="."]
layout_mode = 0
offset_left = 436.403
offset_top = 206.0
offset_right = 782.403
offset_bottom = 229.0
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_k27mc")

[node name="ConfirmPassword" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 432.403
offset_top = 247.0
offset_right = 787.403
offset_bottom = 285.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.403922)
theme_override_fonts/font = ExtResource("5_me4ey")
theme_override_font_sizes/font_size = 18
placeholder_text = "Confirmar senha"
flat = true
secret = true

[node name="ConfirmPasswordErrorMessage" type="Label" parent="."]
layout_mode = 0
offset_left = 434.403
offset_top = 288.0
offset_right = 780.403
offset_bottom = 311.0
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_k27mc")

[node name="PIN" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 432.403
offset_top = 327.0
offset_right = 787.403
offset_bottom = 365.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.403922)
theme_override_fonts/font = ExtResource("5_me4ey")
theme_override_font_sizes/font_size = 20
placeholder_text = "PIN"
flat = true

[node name="PINErrorMessage" type="Label" parent="."]
layout_mode = 0
offset_left = 436.403
offset_top = 369.0
offset_right = 782.403
offset_bottom = 392.0
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_k27mc")

[node name="Create" type="Button" parent="."]
layout_mode = 0
offset_left = 636.403
offset_top = 414.0
offset_right = 771.403
offset_bottom = 472.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.709804, 0.411765, 0.290196, 1)
theme_override_fonts/font = ExtResource("5_me4ey")
theme_override_font_sizes/font_size = 18
text = "Finalizar"
icon = ExtResource("5_6i7u5")
flat = true
icon_alignment = 1

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 437.403
offset_top = 414.0
offset_right = 572.403
offset_bottom = 472.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.709804, 0.411765, 0.290196, 1)
theme_override_fonts/font = ExtResource("5_me4ey")
theme_override_font_sizes/font_size = 18
text = "Voltar"
icon = ExtResource("5_6i7u5")
flat = true
icon_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="musica_fundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_bc1f0")
volume_db = -10.0
autoplay = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1127.0
offset_top = 517.0
offset_right = 1198.0
offset_bottom = 538.0
theme_override_fonts/font = ExtResource("5_me4ey")
text = "V: 0.8.0"
label_settings = SubResource("LabelSettings_xfit3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 430.403
offset_top = 80.0
offset_right = 470.403
offset_bottom = 120.0
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[connection signal="pressed" from="Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_create_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_request_save_user_data_completed"]
